Fix spacing on the text content

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -264,6 +264,16 @@ header {
     }
   }
 
+  p[data-i18n="about-greetings-highlight"] {
+    font-size: 30px;
+    font-weight: 700;
+    display: inline-block;
+  }
+
+  p[data-i18n="about-my-name"] {
+    display: inline-block;
+  }
+
   img {
     display: none;
   }
